style beginning of section 1

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,46 @@
     <p class="logo">L i g h t w r a p z</p>
     <div class="contact-parent">
     <p class="salesNumber raleway">Sales: 501-502-0549</p>
-    <a href="mailto:doy@lightwrapz.com"><p class="email raleway">Email us</p></a>
+    <a class= "topbar-mailto" href="mailto:doy@lightwrapz.com"><p class="email raleway black">Email us</p></a>
     </div>
   </div>
 
   <div class="hero">
-    <!-- <img src="/img/landing.jpg" alt=""> -->
+    <p class="large white work-sans zeromargin">Fast. Simple. Reliable.</p>
+    <p class="small white work-sans">Take control of your taxiway lighting with the speed and efficiency you need.</p>
+  </div>
+
+  <div class="section1">
+    <p class="heading raleway">OUR PRODUCTS</p>
+    <div class="product-list">
+      <div class="product">
+        <div class="product-image">
+          <img src="/img/black-hat-cap.png" alt="">
+        </div>
+        <div class="product-text">
+          <p class="title">Black Hat</p>
+          <p class="price">$25.00</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-image">
+          <img src="/img/black-hat-cap.png" alt="">
+        </div>
+        <div class="product-text">
+          <p class="title">Black Hat</p>
+          <p class="price">$25.00</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-image">
+          <img src="/img/black-hat-cap.png" alt="">
+        </div>
+        <div class="product-text">
+          <p class="title">Black Hat</p>
+          <p class="price">$25.00</p>
+        </div>
+      </div>
+    </div>
   </div>
 
 
